Make chrome.fileManagerPrivate.getSizeStat return actual available space for Downloads.

getSizeStat() for Downloads used to return
|actual available space| + |evictable Drive cache| - 512MB.
To be consistent with Storage manager (chrome://settings/storage), getSizeStat()
should simplly return |actual available size|.

BUG=640504
TEST=manually compared the avaiable space in Files app and Storage manager.

Review-Url: https://codereview.chromium.org/2274003004
Cr-Commit-Position: refs/heads/master@{#414371}

Former-commit-id: e23227790211a07cbb31d711a2a52e313f8fc0d1